# sosomlab-nexa-viewer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.claude/: settings.json
.github/workflows/: chocolatey.yml  release.yml  winget.yml
docs/: ARCHITECTURE.md  AUTO-REFRESH.md  PORTABLE.md  PROGRESS.md  ROADMAP.md  SEARCH.md
docs/wiki/: Building-and-Release.md  Explorer.md  Exporting.md  FAQ.md  First-Page.md  Getting-Started.md  GitHub-Integration.md  Home.md  Installation.md  Introduction.md  Preferences.md  Viewing-Documents.md  _Sidebar.md
packaging/chocolatey/: nexa-markdown-viewer.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/winget/: README.md
packaging/winget/0.2.1/: SosomLab.NexaMarkdownViewer.installer.yaml  SosomLab.NexaMarkdownViewer.locale.en-US.yaml  (+1 more)
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  secrets.rs
src-tauri/src/providers/: github.rs  local.rs  mod.rs
src/components/: ActivityBar.tsx  Explorer.tsx  ExportModal.tsx  FileTree.tsx  FormatBadge.tsx  GithubMark.tsx  GithubPanel.tsx  HistoryBar.tsx  Icon.tsx  Preferences.tsx  Resizer.tsx  RightBar.tsx  SourceContextMenu.tsx  Toc.tsx  Toolbar.tsx
src/lib/: exporters.ts  filetypes.ts  fonts.ts  paths.ts
src/renderer/: AsyncImage.tsx  MarkdownView.tsx  PlainTextView.tsx  profiles.ts
src/sources/: githubSource.ts  localSource.ts  registry.ts  types.ts
src/store/: github.ts  viewer.ts
