[package]
name = "tauri-scaffold"
version = "0.2.0"
description = "Nexa Markdown Viewer — GitHub 스타일 Markdown 뷰어"
authors = ["SosomLab"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_scaffold_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# 실행 파일 이름 = 앱 이름. (dev 실행 시 macOS 메뉴의 About/Quit 등에 표시됨)
[[bin]]
name = "NexaMarkdownViewer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
async-trait = "0.1.89"
base64 = "0.22.1"
aes-gcm = "0.10.3"
sha2 = "0.11.0"
getrandom = "0.4.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }

